--- a/index.html
+++ b/index.html
@@ -149,13 +149,13 @@
 <!-- スライダー -->
 <div class="swiper">
   <div class="swiper-wrapper">
-    <div class="swiper-slide" style="background-image:url('sample1.jpg')">
+    <div class="swiper-slide" style="background-image:url('sample1.JPG')">
       <div class="overlay"><h2>Photoshop Works</h2></div>
     </div>
-    <div class="swiper-slide" style="background-image:url('sample2.jpg')">
+    <div class="swiper-slide" style="background-image:url('sample2.JPG')">
       <div class="overlay"><h2>YouTube Thumbnails</h2></div>
     </div>
-    <div class="swiper-slide" style="background-image:url('sample3.jpg')">
+    <div class="swiper-slide" style="background-image:url('sample: 3JPG;')">
       <div class="overlay"><h2>Landing Pages</h2></div>
     </div>
   </div>
@@ -168,10 +168,10 @@
 <section id="works">
   <h2>Works</h2>
   <div class="gallery">
-    <img src="sample1.jpg" alt="作品1">
-    <img src="sample2.jpg" alt="作品2">
-    <img src="sample3.jpg" alt="作品3">
-    <img src="sample4.jpg" alt="作品4">
+    <img src="sample1.JPG" alt="作品1">
+    <img src="sample2.JPG" alt="作品2">
+    <img src="sample3.JPG" alt="作品3">
+    <img src="sample4.JPG" alt="作品4">
   </div>
 </section>
 
