--- a/index.html
+++ b/index.html
@@ -30,31 +30,7 @@
         <h1>Photoshop Works</h1>
         <a href="#works" class="btn">View Works</a>
       </div>
-    </div>
-    <div class="swiper-slide" style="background-image:url('/portfolio2/images/sample2.JPG')">
-      <div class="overlay">
-        <h1>YouTube Thumbnails</h1>
-        <a href="#works" class="btn">View Works</a>
-      </div>
-    </div>
-    <div class="swiper-slide" style="background-image:url('/portfolio2/images/sample3.JPG')">
-      <div class="overlay">
-        <h1>Landing Pages</h1>
-        <a href="#works" class="btn">View Works</a>
-      </div>
-    </div>
-  </div>
-  <div class="swiper-pagination"></div>
-  <div class="swiper-button-prev"></div>
-  <div class="swiper-button-next"></div>
-</div>
-
-<!-- 作品集 -->
-<section id="works">
-  <h2>Works</h2>
-  <div class="gallery">
-    <div class="card" data-micromodal-trigger="modal-1">
-      <img src="/portfolio2/images/sample1.JPG" alt="作品1">
+    </div>ges/sample1.JPG" alt="作品1">
       <div class="card-info">
         <h3>作品1</h3>
         <p>Photoshop</p>
