--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
         <a href="#works" class="btn">View Works</a>
       </div>
     </div>
-    <div class="swiper-slide" style="background-image:url('images/sample2.JPG')">
+    <div class="swiper-slide" style="background-image:url('/portfolio2/images/sample2.JPG')">
       <div class="overlay">
         <h1>YouTube Thumbnails</h1>
         <a href="#works" class="btn">View Works</a>
       </div>
     </div>
-    <div class="swiper-slide" style="background-image:url('images/sample3.JPG')">
+    <div class="swiper-slide" style="background-image:url('/portfolio2/images/sample3.JPG')">
       <div class="overlay">
         <h1>Landing Pages</h1>
         <a href="#works" class="btn">View Works</a>
@@ -54,21 +54,21 @@
   <h2>Works</h2>
   <div class="gallery">
     <div class="card" data-micromodal-trigger="modal-1">
-      <img src="images/sample1.JPG" alt="作品1">
+      <img src="/portfolio2/images/sample1.JPG" alt="作品1">
       <div class="card-info">
         <h3>作品1</h3>
         <p>Photoshop</p>
       </div>
     </div>
     <div class="card" data-micromodal-trigger="modal-2">
-      <img src="images/sample2.JPG" alt="作品2">
+      <img src="/portfolio2/images/sample2.JPG" alt="作品2">
       <div class="card-info">
         <h3>作品2</h3>
         <p>YouTube Thumbnails</p>
       </div>
     </div>
     <div class="card" data-micromodal-trigger="modal-3">
-      <img src="images/sample3.JPG" alt="作品3">
+      <img src="/portfolio2/images/sample3.JPG" alt="作品3">
       <div class="card-info">
         <h3>作品3</h3>
         <p>Landing Pages</p>
