--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
 <!-- ヒーロースライダー -->
 <div class="swiper hero-swiper">
   <div class="swiper-wrapper">
-    <div class="swiper-slide" style="background-image:url('/portfolio2/images/sample1.JPG')">
+    <div class="swiper-slide" style="background-image:url('images/sample1.JPG')">
       <div class="overlay">
         <h1>Photoshop Works</h1>
         <a href="#works" class="btn">View Works</a>
       </div>
     </div>
-    <div class="swiper-slide" style="background-image:url('/portfolio2/images/sample2.JPG')">
+    <div class="swiper-slide" style="background-image:url('images/sample2.JPG')">
       <div class="overlay">
         <h1>YouTube Thumbnails</h1>
         <a href="#works" class="btn">View Works</a>
       </div>
     </div>
-    <div class="swiper-slide" style="background-image:url('/portfolio2/images/sample3.JPG')">
+    <div class="swiper-slide" style="background-image:url('images/sample3.JPG')">
       <div class="overlay">
         <h1>Landing Pages</h1>
         <a href="#works" class="btn">View Works</a>
@@ -54,28 +54,28 @@
   <h2>Works</h2>
   <div class="gallery">
     <div class="card" data-micromodal-trigger="modal-1">
-      <img src="/portfolio2/images/sample1.JPG" alt="作品1">
+      <img src="images/sample1.JPG" alt="作品1">
       <div class="card-info">
         <h3>作品1</h3>
         <p>Photoshop</p>
       </div>
     </div>
     <div class="card" data-micromodal-trigger="modal-2">
-      <img src="/portfolio2/images/sample2.JPG" alt="作品2">
+      <img src="images/sample2.JPG" alt="作品2">
       <div class="card-info">
         <h3>作品2</h3>
         <p>YouTube Thumbnails</p>
       </div>
     </div>
     <div class="card" data-micromodal-trigger="modal-3">
-      <img src="/portfolio2/images/sample3.JPG" alt="作品3">
+      <img src="images/sample3.JPG" alt="作品3">
       <div class="card-info">
         <h3>作品3</h3>
         <p>Landing Pages</p>
       </div>
     </div>
     <div class="card" data-micromodal-trigger="modal-4">
-      <img src="/portfolio2/images/sample4.JPG" alt="作品4">
+      <img src="images/sample4.JPG" alt="作品4">
       <div class="card-info">
         <h3>作品4</h3>
         <p>Banners</p>
@@ -85,6 +85,8 @@
 </section>
 
 <!-- モーダル用 HTML -->
+
+<!-- 作品1 -->
 <div class="modal micromodal-slide" id="modal-1" aria-hidden="true">
   <div class="modal__overlay" tabindex="-1">
     <div class="modal__container" role="dialog" aria-modal="true" aria-labelledby="modal-1-title">
@@ -93,12 +95,56 @@
         <button class="modal__close" aria-label="Close modal" data-micromodal-close></button>
       </header>
       <main class="modal__content">
-        <img src="/portfolio2/images/sample1.JPG" alt="作品1">
+        <img src="images/sample1.JPG" alt="作品1">
       </main>
     </div>
   </div>
 </div>
-<!-- 同様に modal-2, modal-3, modal-4 を作成 -->
+
+<!-- 作品2 -->
+<div class="modal micromodal-slide" id="modal-2" aria-hidden="true">
+  <div class="modal__overlay" tabindex="-1">
+    <div class="modal__container" role="dialog" aria-modal="true" aria-labelledby="modal-2-title">
+      <header class="modal__header">
+        <h2 id="modal-2-title">作品2</h2>
+        <button class="modal__close" aria-label="Close modal" data-micromodal-close></button>
+      </header>
+      <main class="modal__content">
+        <img src="images/sample2.JPG" alt="作品2">
+      </main>
+    </div>
+  </div>
+</div>
+
+<!-- 作品3 -->
+<div class="modal micromodal-slide" id="modal-3" aria-hidden="true">
+  <div class="modal__overlay" tabindex="-1">
+    <div class="modal__container" role="dialog" aria-modal="true" aria-labelledby="modal-3-title">
+      <header class="modal__header">
+        <h2 id="modal-3-title">作品3</h2>
+        <button class="modal__close" aria-label="Close modal" data-micromodal-close></button>
+      </header>
+      <main class="modal__content">
+        <img src="images/sample3.JPG" alt="作品3">
+      </main>
+    </div>
+  </div>
+</div>
+
+<!-- 作品4 -->
+<div class="modal micromodal-slide" id="modal-4" aria-hidden="true">
+  <div class="modal__overlay" tabindex="-1">
+    <div class="modal__container" role="dialog" aria-modal="true" aria-labelledby="modal-4-title">
+      <header class="modal__header">
+        <h2 id="modal-4-title">作品4</h2>
+        <button class="modal__close" aria-label="Close modal" data-micromodal-close></button>
+      </header>
+      <main class="modal__content">
+        <img src="images/sample4.JPG" alt="作品4">
+      </main>
+    </div>
+  </div>
+</div>
 
 <!-- サービス -->
 <section id="services">
