--- a/index.html
+++ b/index.html
@@ -51,7 +51,39 @@
 </div>
 
 <!-- 作品集 -->
-
+<section id="works">
+  <h2>Works</h2>
+  <div class="gallery">
+    <div class="card" data-micromodal-trigger="modal-1">
+      <img src="images/sample1.JPG" alt="作品1">
+      <div class="card-info">
+        <h3>作品1</h3>
+        <p>Photoshop</p>
+      </div>
+    </div>
+    <div class="card" data-micromodal-trigger="modal-2">
+      <img src="images/sample2.JPG" alt="作品2">
+      <div class="card-info">
+        <h3>作品2</h3>
+        <p>YouTube Thumbnails</p>
+      </div>
+    </div>
+    <div class="card" data-micromodal-trigger="modal-3">
+      <img src="images/sample3.JPG" alt="作品3">
+      <div class="card-info">
+        <h3>作品3</h3>
+        <p>Landing Pages</p>
+      </div>
+    </div>
+    <div class="card" data-micromodal-trigger="modal-4">
+      <img src="images/sample4.JPG" alt="作品4">
+      <div class="card-info">
+        <h3>作品4</h3>
+        <p>Banners</p>
+      </div>
+    </div>
+  </div>
+</section>
 
 <!-- モーダル -->
 <div class="modal micromodal-slide" id="modal-1" aria-hidden="true">
