--- a/landing.html
+++ b/landing.html
@@ -16,7 +16,7 @@
   </nav>
 </header>
 
-<section>
+<section id="works">
   <h2>ランディングページ制作</h2>
   <p>企業向けの集客・販促ページ制作を行います。</p>
   <div class="gallery">
