--- a/photoshop.html
+++ b/photoshop.html
@@ -16,7 +16,7 @@
   </nav>
 </header>
 
-<section>
+<section id="works">
   <h2>Photoshop制作</h2>
   <p>高品質な画像制作、加工、編集を行います。</p>
   <div class="gallery">
