--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
 <header>
-  <div class="logo">My Pあortfolio</div>
+  <div class="logo">My Portfolio</div>
   <nav>
     <a href="#works">Works</a>
     <a href="photoshop.html">Photoshop制作</a>
