--- a/youtube.html
+++ b/youtube.html
@@ -16,7 +16,7 @@
   </nav>
 </header>
 
-<section id="works">
+<section id="works2">
   <h2>YouTubeサムネイル制作</h2>
   <p>再生されやすいサムネイルデザインを提供します。</p>
   <div class="gallery">
